--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                   type="date"
                   id="birthdate"
                   name="birthdate"
+                  max="2016-12-31"
                 /><br>
               </div>
               <div
